--- a/docs/posts/04wk-1.out.ipynb
+++ b/docs/posts/04wk-1.out.ipynb
@@ -13,11 +13,11 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "98a47349-9bbd-4a71-bd18-508bc2e200ca"
+      "id": "d5009c2c-67b5-42e5-ad7d-f7ab8d98ae3e"
     },
     {
       "cell_type": "code",
-      "execution_count": 1025,
+      "execution_count": 5,
       "metadata": {
         "tags": []
       },
@@ -33,11 +33,11 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "11217858-1fc8-4159-9161-7d5c3f1ed926"
+      "id": "667bb4d8-5de1-4225-a406-b43a79c384fe"
     },
     {
       "cell_type": "code",
-      "execution_count": 944,
+      "execution_count": 30,
       "metadata": {
         "tags": []
       },
@@ -46,6 +46,7 @@
         "import torch\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt \n",
+        "import pandas as pd\n",
         "#from fastai.data.all import * \n",
         "#import torchvision\n",
         "#import pathlib"
@@ -67,11 +68,11 @@
         "\n",
         "`-` 맞춰봐"
       ],
-      "id": "69d0ce84-aaf6-4b98-841f-f01fd708dfa1"
+      "id": "2a8b5c3b-2138-4a71-b4ff-30d18a3feee0"
     },
     {
       "cell_type": "code",
-      "execution_count": 1026,
+      "execution_count": 7,
       "metadata": {
         "tags": []
       },
@@ -90,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1027,
+      "execution_count": 8,
       "metadata": {
         "tags": []
       },
@@ -120,11 +121,11 @@
         "\n",
         "$$\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,256)}{\\boldsymbol u^{(1)}} \\overset{a_1}{\\to} \\underset{(n,256)}{\\boldsymbol v^{(1)}} \\overset{l_1}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{a_2}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$$"
       ],
-      "id": "b9ba7729-3b01-4a6f-a263-c6ecc68c8e55"
+      "id": "7eecfb62-fff7-4d6d-8cf2-fcc722ac8f21"
     },
     {
       "cell_type": "code",
-      "execution_count": 1028,
+      "execution_count": 9,
       "metadata": {
         "tags": []
       },
@@ -156,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1029,
+      "execution_count": 10,
       "metadata": {
         "tags": []
       },
@@ -195,11 +196,11 @@
         "\n",
         "[1] 2024년 수능 미적30번 문제에 나온 함수응용"
       ],
-      "id": "bdd20365-fa74-43e4-9695-0197ad2f3322"
+      "id": "7ab6e47b-c22b-486c-bd20-833954208497"
     },
     {
       "cell_type": "code",
-      "execution_count": 1030,
+      "execution_count": 11,
       "metadata": {
         "tags": []
       },
@@ -215,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1031,
+      "execution_count": 12,
       "metadata": {
         "tags": []
       },
@@ -243,11 +244,11 @@
         "\n",
         "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,1024)}{\\boldsymbol u^{(1)}} \\overset{a_1}{\\to} \\underset{(n,1024)}{\\boldsymbol v^{(1)}} \\overset{l_1}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{a_2}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$"
       ],
-      "id": "108c0ad6-3098-405a-98ac-e6f9f2463c3e"
+      "id": "07cc2bc8-0cca-4e28-aec7-bd894ef94acd"
     },
     {
       "cell_type": "code",
-      "execution_count": 1032,
+      "execution_count": 13,
       "metadata": {
         "tags": []
       },
@@ -277,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1033,
+      "execution_count": 14,
       "metadata": {
         "tags": []
       },
@@ -343,11 +344,11 @@
         "\n",
         "`-` 데이터"
       ],
-      "id": "34c79c1d-8a4c-4aef-9dab-628a550e294a"
+      "id": "633ac9e7-943e-4d14-a85c-4bbdc8303ebc"
     },
     {
       "cell_type": "code",
-      "execution_count": 1034,
+      "execution_count": 15,
       "metadata": {
         "tags": []
       },
@@ -364,11 +365,11 @@
         "`-` 아래와 같은 네트워크를 고려하자. (스펙올라도 취업못하는 예제에서\n",
         "썼던 네크워크랑 비슷해요)"
       ],
-      "id": "63fd0c31-318c-44db-a935-378bf6548164"
+      "id": "5239511d-e0aa-4694-bd78-4c57bdc343ed"
     },
     {
       "cell_type": "code",
-      "execution_count": 1036,
+      "execution_count": 16,
       "metadata": {
         "tags": []
       },
@@ -387,11 +388,11 @@
         "`-` 직관1: $l_1$,$l_2$의 가중치를 잘 결합하다보면 우연히 아래와 같이\n",
         "만들 수 있다."
       ],
-      "id": "8c76ea9a-925b-4d26-947d-8dd0041d870d"
+      "id": "fd8baf58-e11a-48e9-b7e9-c41222068ec3"
     },
     {
       "cell_type": "code",
-      "execution_count": 1037,
+      "execution_count": 17,
       "metadata": {
         "tags": []
       },
@@ -404,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1038,
+      "execution_count": 18,
       "metadata": {
         "tags": []
       },
@@ -417,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1053,
+      "execution_count": 19,
       "metadata": {
         "tags": []
       },
@@ -452,11 +453,11 @@
       "source": [
         "`-` 직관2: 아래들도 가능할듯?"
       ],
-      "id": "f89c2c03-a074-46a5-a7c6-6778e8e7ff23"
+      "id": "7018daf8-dfd7-47eb-848c-a11f84dedb2d"
     },
     {
       "cell_type": "code",
-      "execution_count": 1072,
+      "execution_count": 20,
       "metadata": {
         "tags": []
       },
@@ -484,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1073,
+      "execution_count": 21,
       "metadata": {
         "tags": []
       },
@@ -518,11 +519,11 @@
         "$(l_2\\circ a_1 \\circ l_1)(x)$의 결과로 주황색선 + 파란색선도 가능할 것\n",
         "같다. $\\to$ 실제로 가능함"
       ],
-      "id": "f96e6ec2-e4a8-4856-afa4-68f3fc27df28"
+      "id": "9acae649-ddef-4246-9c10-f083756da42b"
     },
     {
       "cell_type": "code",
-      "execution_count": 1074,
+      "execution_count": 22,
       "metadata": {
         "tags": []
       },
@@ -536,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1075,
+      "execution_count": 23,
       "metadata": {
         "tags": []
       },
@@ -551,7 +552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1080,
+      "execution_count": 24,
       "metadata": {
         "tags": []
       },
@@ -580,11 +581,11 @@
         "`-` 정리1: 2개의 시그모이드를 우연히 잘 결합하면 아래와 같은\n",
         "“1단계-계단함수” 함수 $h$를 만들 수 있다."
       ],
-      "id": "6fae7726-0b55-4775-91b8-2ac339ef09ee"
+      "id": "9e947de7-af85-4046-a137-2c25064386dd"
     },
     {
       "cell_type": "code",
-      "execution_count": 978,
+      "execution_count": 25,
       "metadata": {
         "tags": []
       },
@@ -596,7 +597,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 979,
+      "execution_count": 26,
       "metadata": {
         "tags": []
       },
@@ -621,7 +622,8 @@
       "source": [
         "`-` 정리2: 위와 같은 함수 $h$를 활성화함수로 하고 $m$개의 노드를 가지는\n",
         "은닉층을 생각해보자. 이러한 은닉층을 사용한다면 “m단계-계단함수”와 같은\n",
-        "형태의 네트워크는 아래와 같이 표현할 수 있다.\n",
+        "형태의 네트워크는 아래와 같이 $m$개의 은닉노드를 써서 항상 표현할 수\n",
+        "있다.\n",
         "\n",
         "$$\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,m)}{\\boldsymbol u^{(1)}} \\overset{h}{\\to} \\underset{(n,m)}{\\boldsymbol v^{(1)}} \\overset{l_2}{\\to} \\underset{(n,1)}{\\hat{\\boldsymbol y}}$$\n",
         "\n",
@@ -629,18 +631,18 @@
         "\n",
         "$$\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,2m)}{\\boldsymbol u^{(1)}} \\overset{sig}{\\to} \\underset{(n,2m)}{\\boldsymbol v^{(1)}} \\overset{l_2}{\\to} \\underset{(n,1)}{\\hat{\\boldsymbol y}}$$\n",
         "\n",
-        "`-` 정리3: 그런데 어떠한 함수형태라도 구불구불한 “m단계-계단함수”로 다\n",
+        "`-` 직관4: 그런데 어떠한 함수형태라도 구불구불한 “m단계-계단함수”로 다\n",
         "근사할 수 있지 않나?\n",
         "\n",
         "## C. $h$의 위력\n",
         "\n",
         "`-` $h(x)$를 활성화함수로 가지는 네트워크를 설계하여 보자."
       ],
-      "id": "5c186c58-c899-465a-8197-8d8d32cd8c49"
+      "id": "b94e23a6-ac9b-4e30-b374-9c79f6012a14"
     },
     {
       "cell_type": "code",
-      "execution_count": 1012,
+      "execution_count": 27,
       "metadata": {
         "tags": []
       },
@@ -649,14 +651,15 @@
         "class MyActivation(torch.nn.Module): ## 사용자정의 활성화함수를 선언하는 방법\n",
         "    def __init__(self):\n",
         "        super().__init__() \n",
-        "    def forward(self, input):\n",
-        "        return h(input) # activation 의 출력 "
+        "    def forward(self, u):\n",
+        "        v = h(u)\n",
+        "        return v # activation 의 출력 "
       ],
       "id": "0621cd71-a43d-4dfa-b9da-e9222cb51323"
     },
     {
       "cell_type": "code",
-      "execution_count": 1013,
+      "execution_count": 28,
       "metadata": {
         "tags": []
       },
@@ -680,11 +683,11 @@
         "\n",
         "**예제1** – 스펙높아도 취업이 안된다고??"
       ],
-      "id": "f1c515a8-3c50-4d2e-b591-bdd8f44e0087"
+      "id": "abbb3323-fb3f-4971-a441-efe3e8229304"
     },
     {
       "cell_type": "code",
-      "execution_count": 1014,
+      "execution_count": 35,
       "metadata": {
         "tags": []
       },
@@ -699,7 +702,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1015,
+      "execution_count": 36,
       "metadata": {
         "tags": []
       },
@@ -707,11 +710,12 @@
       "source": [
         "torch.manual_seed(43052)\n",
         "h = lambda x: torch.sigmoid(200*(x+0.5))+torch.sigmoid(-200*(x-0.5))-1.0\n",
-        "class MyActivation(torch.nn.Module): ## 사용자정의 활성화함수를 선언하는 방법\n",
+        "class MyActivation(torch.nn.Module):\n",
         "    def __init__(self):\n",
         "        super().__init__() \n",
-        "    def forward(self, input):\n",
-        "        return h(input) \n",
+        "    def forward(self, u):\n",
+        "        v = h(u)\n",
+        "        return v\n",
         "#---# \n",
         "net = torch.nn.Sequential(\n",
         "    torch.nn.Linear(1,2048),\n",
@@ -737,7 +741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1016,
+      "execution_count": 37,
       "metadata": {
         "tags": []
       },
@@ -763,11 +767,11 @@
       "source": [
         "**예제2** – 수능에 나왔다던 이상한 곡선..?"
       ],
-      "id": "c74ca00c-6a71-4c9b-8e6e-c8816ed13e71"
+      "id": "fff38f41-f54e-4acf-b1f7-2f974ea47b51"
     },
     {
       "cell_type": "code",
-      "execution_count": 1020,
+      "execution_count": 38,
       "metadata": {
         "tags": []
       },
@@ -783,7 +787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1021,
+      "execution_count": 39,
       "metadata": {
         "tags": []
       },
@@ -820,7 +824,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1024,
+      "execution_count": 40,
       "metadata": {
         "tags": []
       },
@@ -876,7 +880,7 @@
         "\n",
         "## A. 데이터 다운로드"
       ],
-      "id": "d49245e7-52a4-40a1-8ade-2ed26a22198a"
+      "id": "b2992990-3d8c-4a22-b87b-5a5045f6d0fd"
     },
     {
       "cell_type": "code",
@@ -989,7 +993,7 @@
         "\n",
         "`-` `plt.imshow(...)` 에서 `...`이 shape이 (??,??)이면 흑백이미지를 출력"
       ],
-      "id": "bc7bba47-4947-4a0c-b9a1-7c925bfe393c"
+      "id": "a5490da3-c888-4b1a-af81-471ef7b37f6f"
     },
     {
       "cell_type": "code",
@@ -1018,7 +1022,7 @@
         "`-` `plt.imshow(...)` 에서 `...`의 shape이 (??,??,3)이면 칼라이미지를\n",
         "출력"
       ],
-      "id": "c7233db4-bf45-4b6f-8ce4-be68f0ea946a"
+      "id": "c1f66ce0-4e82-4e54-ac68-56a6428f0d60"
     },
     {
       "cell_type": "code",
@@ -1050,7 +1054,7 @@
         "`-` `plt.imshow(...)` 에서 `...`의 자료형이 int인지 float인지에 따라서\n",
         "인식이 다름"
       ],
-      "id": "60774b18-19d4-4ef9-a0b0-96516e74b4eb"
+      "id": "5448e535-96ce-41bb-9f64-a8c3c6d75976"
     },
     {
       "cell_type": "code",
@@ -1104,7 +1108,7 @@
       "source": [
         "## C. 예비학습 – pathlib"
       ],
-      "id": "d61914a1-0553-4cc4-bc00-2330d3cc0265"
+      "id": "d8326b72-05b6-40db-8182-a44dc3ec2e02"
     },
     {
       "cell_type": "code",
@@ -1124,7 +1128,7 @@
       "source": [
         "`-` 오브젝트 생성"
       ],
-      "id": "392acb81-6fa0-4d5d-bfc0-3e69a2f92ff7"
+      "id": "f6f50a10-9847-4198-a256-ca44dab138b8"
     },
     {
       "cell_type": "code",
@@ -1145,7 +1149,7 @@
       "source": [
         "`-` 기능1 – `.ls()`"
       ],
-      "id": "df3dfd5f-e021-4f39-922e-91544dd390a9"
+      "id": "7c6880a7-fe0a-45e0-b1d9-a478787d73fc"
     },
     {
       "cell_type": "code",
@@ -1166,7 +1170,7 @@
         "`-` 이미지 파일이 저장된 경로로 새로운 `path`오브젝트를 만들고 기능1\n",
         "수행"
       ],
-      "id": "3ab61b53-90de-49da-9929-b8e864a05681"
+      "id": "f0f9e226-1a57-4d9a-abb4-327dc747a9ab"
     },
     {
       "cell_type": "code",
@@ -1199,7 +1203,7 @@
       "source": [
         "`-` 기능2: `/` 로 새로운 path 생성하기"
       ],
-      "id": "c32b1323-3f54-4256-846e-d107c9f50336"
+      "id": "7a9e69ca-ebd8-4914-9d1f-f8bcb34a3202"
     },
     {
       "cell_type": "code",
@@ -1219,7 +1223,7 @@
       "source": [
         "`-` 기능1,2의 결합"
       ],
-      "id": "25fef977-746e-485b-9da3-b224f225535f"
+      "id": "61b54a7a-5c29-4c06-9d0d-b9bef88bcc59"
     },
     {
       "cell_type": "code",
@@ -1241,7 +1245,7 @@
         "\n",
         "`-` 데이터가 저장된 path 설정"
       ],
-      "id": "4b577502-7789-429f-9f45-20c09566d166"
+      "id": "2ff72d4f-3f73-466a-baa7-36ae0c45ee29"
     },
     {
       "cell_type": "code",
@@ -1261,7 +1265,7 @@
       "source": [
         "`-` `X` ,`y`를 만듦"
       ],
-      "id": "5df27d0d-5f94-4720-81af-7af07f9d2004"
+      "id": "c26e7035-9f2b-4e44-a882-7f1331f7df94"
     },
     {
       "cell_type": "code",
@@ -1344,7 +1348,7 @@
         "배우고 싶음. $\\to$ 이런건 배운적이 없는데?.. $\\to$ 그렇다면\n",
         "${\\bf X}:(n,784) \\to {\\bf y}:(n,1)$ 으로 가는 맵핑을 학습하자."
       ],
-      "id": "297cc52e-f641-4dac-88e6-1e674857cd3c"
+      "id": "90f29c82-602a-4702-9f47-f40b7ba55419"
     },
     {
       "cell_type": "code",
@@ -1365,7 +1369,7 @@
       "source": [
         "## E. 학습"
       ],
-      "id": "d3b3ded1-beb9-4004-9d78-659f1bb9f349"
+      "id": "a8a5c2a8-5d3a-4f1a-a10f-a6ed0848712a"
     },
     {
       "cell_type": "code",
@@ -1423,7 +1427,7 @@
         "-   잘맞추는데?\n",
         "-   믿을수가 없는데..?"
       ],
-      "id": "2452fe57-c977-4fea-aca7-31f98d5799a1"
+      "id": "b71e35f8-ee96-47b7-8d23-3c8f01d40b84"
     },
     {
       "cell_type": "code",
@@ -1443,7 +1447,7 @@
       "source": [
         "## F. Test"
       ],
-      "id": "8b79cef1-1abb-4790-9a80-0f3d2319794b"
+      "id": "359f2eb6-36a2-46b9-97ad-3041959c31fc"
     },
     {
       "cell_type": "code",
@@ -1548,7 +1552,7 @@
       "source": [
         "-   test 에서도 잘 맞춘다.."
       ],
-      "id": "ec8d3f43-541b-4736-9feb-5ce3d02c34c8"
+      "id": "9249720c-e68a-42b1-b75d-f566f47390a5"
     }
   ],
   "nbformat": 4,
