--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "cc982e0e-479b-40c0-ba47-50814393c08d"
+      "id": "87ec0e91-ea0e-439e-b8ba-28ae9769f47f"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "2bc8e5e6-e321-4cdd-8b97-372436f08d6e"
+      "id": "f6e52d6e-921e-45f5-b7e2-8e1c709a7e1b"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "96791347-ad34-4564-8cf9-3e03e9fd0d7a"
+      "id": "da5b99f4-54af-4ef1-b799-02374bee8485"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "1393bdf9-dd5e-4753-ba3f-278597893b96"
+      "id": "d305edc2-b315-456f-b08a-91dbb21f9fa4"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "e5f5d4a8-26cf-4272-a6c6-a49c07518149"
+      "id": "f8ad5436-8fc5-41a5-83e3-400065e9253d"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "fd1c4d6a-d8f3-4473-a668-32ebf1fe9486"
+      "id": "b023e2d7-cbb1-444c-bbd4-b338dfee7e1c"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "37043c26-7b6b-4a90-9c0a-4e87184ed878"
+      "id": "bd3ff7cc-89b4-4062-b33c-5d4fa17688ae"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "3256afba-5389-4ed2-b4d4-9ed2b562b31e"
+      "id": "4782ab6a-aa55-4b7b-aae3-7cf30b338a60"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "557e6442-1957-4a3c-9d89-0b46bb6fbf7c"
+      "id": "07575473-1804-4a77-aa8c-9d868303195e"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "0c324cef-d99d-43e0-8701-9173f7b6576f"
+      "id": "3b3659da-ba61-496a-bea9-31f009394cc4"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "30499b0e-b3c7-4f96-8e04-14ee4ea5260e"
+      "id": "125f6d3a-4c8b-4ab9-a4b5-3617b91961ea"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "48ab6cdc-18b9-4148-bbf3-7df381fa2ec4"
+      "id": "ac663712-ef67-4c27-92d5-1a98b1fce8aa"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "4b82e4b6-ff1e-4062-8832-644d1f4c57b0"
+      "id": "4347c7d7-db64-4525-9f9f-004147a3c565"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "75dd81a6-4100-49d4-af85-9074c6a46e05"
+      "id": "5bfbe253-4294-4023-9d94-bb3d2820b3b2"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "586edc27-0c52-4098-8148-415215671d2b"
+      "id": "ee2fba66-8400-4d78-a07d-6d69746adc47"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "23949fad-e626-4fec-9e09-c45de0a81356"
+      "id": "290c7df7-8df9-436d-9ab0-98db450df10b"
     },
     {
       "cell_type": "code",
