--- a/docs/posts/04wk-1.out.ipynb
+++ b/docs/posts/04wk-1.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 04wk-1: 깊은신경망 (2) – 꺽인그래프의 한계?, 시벤코정리, MNIST\n",
+        "# 04wk-1: 깊은신경망 (2) – 꺽인그래프의 한계(?), 시벤코정리, MNIST\n",
         "\n",
         "최규빈  \n",
         "2024-03-20\n",
@@ -13,11 +13,11 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "d5009c2c-67b5-42e5-ad7d-f7ab8d98ae3e"
+      "id": "057df008-9b69-44c6-8376-505ab6dc01b8"
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1083,
       "metadata": {
         "tags": []
       },
@@ -33,11 +33,11 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "667bb4d8-5de1-4225-a406-b43a79c384fe"
+      "id": "72294236-5686-448c-bfaa-72a02ddba36d"
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 1084,
       "metadata": {
         "tags": []
       },
@@ -68,11 +68,11 @@
         "\n",
         "`-` 맞춰봐"
       ],
-      "id": "2a8b5c3b-2138-4a71-b4ff-30d18a3feee0"
+      "id": "a450598d-8ab0-47ee-bd90-e5e41ae77165"
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1085,
       "metadata": {
         "tags": []
       },
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1086,
       "metadata": {
         "tags": []
       },
@@ -121,11 +121,11 @@
         "\n",
         "$$\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,256)}{\\boldsymbol u^{(1)}} \\overset{a_1}{\\to} \\underset{(n,256)}{\\boldsymbol v^{(1)}} \\overset{l_1}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{a_2}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$$"
       ],
-      "id": "7eecfb62-fff7-4d6d-8cf2-fcc722ac8f21"
+      "id": "da4db10d-e724-4909-b5d0-de0661ad6d05"
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1087,
       "metadata": {
         "tags": []
       },
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 1088,
       "metadata": {
         "tags": []
       },
@@ -196,11 +196,11 @@
         "\n",
         "[1] 2024년 수능 미적30번 문제에 나온 함수응용"
       ],
-      "id": "7ab6e47b-c22b-486c-bd20-833954208497"
+      "id": "29cae174-f27b-4dfe-ab66-54c5e3763487"
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 1089,
       "metadata": {
         "tags": []
       },
@@ -216,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 1090,
       "metadata": {
         "tags": []
       },
@@ -244,11 +244,11 @@
         "\n",
         "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,1024)}{\\boldsymbol u^{(1)}} \\overset{a_1}{\\to} \\underset{(n,1024)}{\\boldsymbol v^{(1)}} \\overset{l_1}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{a_2}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$"
       ],
-      "id": "07cc2bc8-0cca-4e28-aec7-bd894ef94acd"
+      "id": "3401ff47-4cce-42c4-aadd-84e9abb703e2"
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 1091,
       "metadata": {
         "tags": []
       },
@@ -278,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 1092,
       "metadata": {
         "tags": []
       },
@@ -307,8 +307,7 @@
         "\n",
         "## A. 시벤코의 정리 소개\n",
         "\n",
-        "> **Universal Approximation Thm:\n",
-        "> (범용근사정리,보편근사정리,시벤코정리)**\n",
+        "> **Universal Approximation Thm (Cybenko 1989)**\n",
         ">\n",
         "> 하나의 은닉층을 가지는 아래와 같은 꼴의 네트워크\n",
         "> $net: {\\bf X}_{n \\times p} \\to {\\bf y}_{n\\times q}$는\n",
@@ -344,11 +343,11 @@
         "\n",
         "`-` 데이터"
       ],
-      "id": "633ac9e7-943e-4d14-a85c-4bbdc8303ebc"
+      "id": "95827e5b-9e12-42be-a68c-cb424a35ea3e"
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 1093,
       "metadata": {
         "tags": []
       },
@@ -365,11 +364,11 @@
         "`-` 아래와 같은 네트워크를 고려하자. (스펙올라도 취업못하는 예제에서\n",
         "썼던 네크워크랑 비슷해요)"
       ],
-      "id": "5239511d-e0aa-4694-bd78-4c57bdc343ed"
+      "id": "a89450a2-875e-4927-b64e-3008aaff4b6f"
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 1094,
       "metadata": {
         "tags": []
       },
@@ -388,11 +387,11 @@
         "`-` 직관1: $l_1$,$l_2$의 가중치를 잘 결합하다보면 우연히 아래와 같이\n",
         "만들 수 있다."
       ],
-      "id": "fd8baf58-e11a-48e9-b7e9-c41222068ec3"
+      "id": "1f1f4206-7e36-447a-be6f-b5e5d65e72ea"
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 1095,
       "metadata": {
         "tags": []
       },
@@ -405,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 1096,
       "metadata": {
         "tags": []
       },
@@ -418,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 1097,
       "metadata": {
         "tags": []
       },
@@ -453,11 +452,11 @@
       "source": [
         "`-` 직관2: 아래들도 가능할듯?"
       ],
-      "id": "7018daf8-dfd7-47eb-848c-a11f84dedb2d"
+      "id": "44d54ae7-070e-4080-bb6e-71eee6415bc9"
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 1098,
       "metadata": {
         "tags": []
       },
@@ -485,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 1099,
       "metadata": {
         "tags": []
       },
@@ -519,11 +518,11 @@
         "$(l_2\\circ a_1 \\circ l_1)(x)$의 결과로 주황색선 + 파란색선도 가능할 것\n",
         "같다. $\\to$ 실제로 가능함"
       ],
-      "id": "9acae649-ddef-4246-9c10-f083756da42b"
+      "id": "a3c5ef76-4d2f-4045-97e3-429de34011a8"
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 1100,
       "metadata": {
         "tags": []
       },
@@ -537,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 1101,
       "metadata": {
         "tags": []
       },
@@ -552,7 +551,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 1102,
       "metadata": {
         "tags": []
       },
@@ -581,11 +580,11 @@
         "`-` 정리1: 2개의 시그모이드를 우연히 잘 결합하면 아래와 같은\n",
         "“1단계-계단함수” 함수 $h$를 만들 수 있다."
       ],
-      "id": "9e947de7-af85-4046-a137-2c25064386dd"
+      "id": "d1a1cb8f-7103-4601-8c2c-2e1d32628449"
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 1103,
       "metadata": {
         "tags": []
       },
@@ -597,7 +596,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 1104,
       "metadata": {
         "tags": []
       },
@@ -638,11 +637,11 @@
         "\n",
         "`-` $h(x)$를 활성화함수로 가지는 네트워크를 설계하여 보자."
       ],
-      "id": "b94e23a6-ac9b-4e30-b374-9c79f6012a14"
+      "id": "80376e99-b69a-4082-a3ce-617b5a6ce365"
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 1105,
       "metadata": {
         "tags": []
       },
@@ -659,7 +658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 1106,
       "metadata": {
         "tags": []
       },
@@ -683,11 +682,11 @@
         "\n",
         "**예제1** – 스펙높아도 취업이 안된다고??"
       ],
-      "id": "abbb3323-fb3f-4971-a441-efe3e8229304"
+      "id": "df6b1533-0de1-49f6-8669-827356f8a7d4"
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 1107,
       "metadata": {
         "tags": []
       },
@@ -702,7 +701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 1108,
       "metadata": {
         "tags": []
       },
@@ -741,7 +740,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 1109,
       "metadata": {
         "tags": []
       },
@@ -767,11 +766,11 @@
       "source": [
         "**예제2** – 수능에 나왔다던 이상한 곡선..?"
       ],
-      "id": "fff38f41-f54e-4acf-b1f7-2f974ea47b51"
+      "id": "23f96f5c-70ec-4230-b1de-776a4c772b52"
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 1110,
       "metadata": {
         "tags": []
       },
@@ -787,7 +786,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 1111,
       "metadata": {
         "tags": []
       },
@@ -795,11 +794,12 @@
       "source": [
         "torch.manual_seed(43052)\n",
         "h = lambda x: torch.sigmoid(200*(x+0.5))+torch.sigmoid(-200*(x-0.5))-1.0\n",
-        "class MyActivation(torch.nn.Module): ## 사용자정의 활성화함수를 선언하는 방법\n",
+        "class MyActivation(torch.nn.Module):\n",
         "    def __init__(self):\n",
         "        super().__init__() \n",
-        "    def forward(self, input):\n",
-        "        return h(input) \n",
+        "    def forward(self, u):\n",
+        "        v = h(u)\n",
+        "        return v\n",
         "#---# \n",
         "net = torch.nn.Sequential(\n",
         "    torch.nn.Linear(1,2048),\n",
@@ -824,7 +824,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 1112,
       "metadata": {
         "tags": []
       },
@@ -880,7 +880,7 @@
         "\n",
         "## A. 데이터 다운로드"
       ],
-      "id": "b2992990-3d8c-4a22-b87b-5a5045f6d0fd"
+      "id": "5fffe1d7-12da-437f-a50e-1ee27d62a563"
     },
     {
       "cell_type": "code",
@@ -993,7 +993,7 @@
         "\n",
         "`-` `plt.imshow(...)` 에서 `...`이 shape이 (??,??)이면 흑백이미지를 출력"
       ],
-      "id": "a5490da3-c888-4b1a-af81-471ef7b37f6f"
+      "id": "7b670fcb-9c25-4f90-9d0b-b15c9174e431"
     },
     {
       "cell_type": "code",
@@ -1022,7 +1022,7 @@
         "`-` `plt.imshow(...)` 에서 `...`의 shape이 (??,??,3)이면 칼라이미지를\n",
         "출력"
       ],
-      "id": "c1f66ce0-4e82-4e54-ac68-56a6428f0d60"
+      "id": "64cd426b-25d9-49f2-a016-c26b6b1b801e"
     },
     {
       "cell_type": "code",
@@ -1054,7 +1054,7 @@
         "`-` `plt.imshow(...)` 에서 `...`의 자료형이 int인지 float인지에 따라서\n",
         "인식이 다름"
       ],
-      "id": "5448e535-96ce-41bb-9f64-a8c3c6d75976"
+      "id": "0bb52942-f0ba-49f0-80f0-2bde3a41eca7"
     },
     {
       "cell_type": "code",
@@ -1108,7 +1108,7 @@
       "source": [
         "## C. 예비학습 – pathlib"
       ],
-      "id": "d8326b72-05b6-40db-8182-a44dc3ec2e02"
+      "id": "4bd0bcd8-cc0d-4f8f-97ec-4564134845c3"
     },
     {
       "cell_type": "code",
@@ -1128,7 +1128,7 @@
       "source": [
         "`-` 오브젝트 생성"
       ],
-      "id": "f6f50a10-9847-4198-a256-ca44dab138b8"
+      "id": "d4af8e8e-6254-40d6-97c8-5566d84cf185"
     },
     {
       "cell_type": "code",
@@ -1149,7 +1149,7 @@
       "source": [
         "`-` 기능1 – `.ls()`"
       ],
-      "id": "7c6880a7-fe0a-45e0-b1d9-a478787d73fc"
+      "id": "8aed5603-dbd1-401b-b1ac-24773e9ecc35"
     },
     {
       "cell_type": "code",
@@ -1170,7 +1170,7 @@
         "`-` 이미지 파일이 저장된 경로로 새로운 `path`오브젝트를 만들고 기능1\n",
         "수행"
       ],
-      "id": "f0f9e226-1a57-4d9a-abb4-327dc747a9ab"
+      "id": "5e8da113-750b-4787-ba30-f77ddf8e47ef"
     },
     {
       "cell_type": "code",
@@ -1203,7 +1203,7 @@
       "source": [
         "`-` 기능2: `/` 로 새로운 path 생성하기"
       ],
-      "id": "7a9e69ca-ebd8-4914-9d1f-f8bcb34a3202"
+      "id": "4fad77d5-5f35-4f3c-96e6-5cfc649ddef3"
     },
     {
       "cell_type": "code",
@@ -1223,7 +1223,7 @@
       "source": [
         "`-` 기능1,2의 결합"
       ],
-      "id": "61b54a7a-5c29-4c06-9d0d-b9bef88bcc59"
+      "id": "beb9a974-5fb5-4aba-9e9e-f8b86b9fa942"
     },
     {
       "cell_type": "code",
@@ -1245,7 +1245,7 @@
         "\n",
         "`-` 데이터가 저장된 path 설정"
       ],
-      "id": "2ff72d4f-3f73-466a-baa7-36ae0c45ee29"
+      "id": "2bc55882-d9f3-4b16-b1dd-24b36d1af831"
     },
     {
       "cell_type": "code",
@@ -1265,7 +1265,7 @@
       "source": [
         "`-` `X` ,`y`를 만듦"
       ],
-      "id": "c26e7035-9f2b-4e44-a882-7f1331f7df94"
+      "id": "cbfbd644-fcfc-4bdf-bd44-fba9d4109ded"
     },
     {
       "cell_type": "code",
@@ -1348,7 +1348,7 @@
         "배우고 싶음. $\\to$ 이런건 배운적이 없는데?.. $\\to$ 그렇다면\n",
         "${\\bf X}:(n,784) \\to {\\bf y}:(n,1)$ 으로 가는 맵핑을 학습하자."
       ],
-      "id": "90f29c82-602a-4702-9f47-f40b7ba55419"
+      "id": "81daeedd-0bdc-4943-9810-c8cee14b17d5"
     },
     {
       "cell_type": "code",
@@ -1369,7 +1369,7 @@
       "source": [
         "## E. 학습"
       ],
-      "id": "a8a5c2a8-5d3a-4f1a-a10f-a6ed0848712a"
+      "id": "cc4bf784-9413-44a0-8b98-96c97a6b4793"
     },
     {
       "cell_type": "code",
@@ -1427,7 +1427,7 @@
         "-   잘맞추는데?\n",
         "-   믿을수가 없는데..?"
       ],
-      "id": "b71e35f8-ee96-47b7-8d23-3c8f01d40b84"
+      "id": "0f9eb1df-7d2b-47c8-85dc-21cbc5c19fcc"
     },
     {
       "cell_type": "code",
@@ -1447,7 +1447,7 @@
       "source": [
         "## F. Test"
       ],
-      "id": "359f2eb6-36a2-46b9-97ad-3041959c31fc"
+      "id": "0d67a0ad-1192-459e-9b1a-a6cb5be5b9f6"
     },
     {
       "cell_type": "code",
@@ -1550,9 +1550,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "-   test 에서도 잘 맞춘다.."
+        "-   test 에서도 잘 맞춘다..\n",
+        "\n",
+        "Cybenko, George. 1989. “Approximation by Superpositions of a Sigmoidal\n",
+        "Function.” *Mathematics of Control, Signals and Systems* 2 (4): 303–14."
       ],
-      "id": "9249720c-e68a-42b1-b75d-f566f47390a5"
+      "id": "5e8e7f96-6d7d-4cdc-80c5-4205d14f7e13"
     }
   ],
   "nbformat": 4,
