--- a/posts/ref.bib
+++ b/posts/ref.bib
@@ -4,3 +4,14 @@
   howpublished = {\url{https://www.google.com}},
   note = {Accessed: September 01, 2023}
 }
+
+@article{cybenko1989approximation,
+  title={Approximation by superpositions of a sigmoidal function},
+  author={Cybenko, George},
+  journal={Mathematics of control, signals and systems},
+  volume={2},
+  number={4},
+  pages={303--314},
+  year={1989},
+  publisher={Springer}
+}
