--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "87ec0e91-ea0e-439e-b8ba-28ae9769f47f"
+      "id": "237941ef-840b-4ff2-bc70-38d6a8cfe2db"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "f6e52d6e-921e-45f5-b7e2-8e1c709a7e1b"
+      "id": "d4c93d1e-0242-4efd-b24c-5cf065e0f72e"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "da5b99f4-54af-4ef1-b799-02374bee8485"
+      "id": "d288b0e2-a92b-4a7b-abfc-a2039b4fbb9d"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "d305edc2-b315-456f-b08a-91dbb21f9fa4"
+      "id": "3922f482-6294-46c5-85af-0452afb9964e"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "f8ad5436-8fc5-41a5-83e3-400065e9253d"
+      "id": "e34d412f-e0cb-4586-9560-f5d7b94e3db1"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "b023e2d7-cbb1-444c-bbd4-b338dfee7e1c"
+      "id": "7ca6b38b-a2ee-4753-84da-149b195df923"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "bd3ff7cc-89b4-4062-b33c-5d4fa17688ae"
+      "id": "aba71b12-1025-44ad-8a84-aff0255fd8f6"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "4782ab6a-aa55-4b7b-aae3-7cf30b338a60"
+      "id": "e0dad648-040d-44c1-8e2f-0e8ddc869d89"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "07575473-1804-4a77-aa8c-9d868303195e"
+      "id": "5ae9d8dd-d7ae-4e50-a08d-7c45b0a00614"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "3b3659da-ba61-496a-bea9-31f009394cc4"
+      "id": "12222b3e-3c54-4d4e-91c3-dd1a7677ae3b"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "125f6d3a-4c8b-4ab9-a4b5-3617b91961ea"
+      "id": "553edca8-4f7c-4ed7-ab2f-419814cfd570"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "ac663712-ef67-4c27-92d5-1a98b1fce8aa"
+      "id": "21c89ee3-7595-471f-8530-7dab95c881b1"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "4347c7d7-db64-4525-9f9f-004147a3c565"
+      "id": "37dec905-9809-4c7b-9dda-b90ac8db99f5"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "5bfbe253-4294-4023-9d94-bb3d2820b3b2"
+      "id": "1c01e769-568c-4aa7-8d3d-2f994a741434"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "ee2fba66-8400-4d78-a07d-6d69746adc47"
+      "id": "0c4e9f05-1ced-4f6e-88b6-9be8ed0b829c"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "290c7df7-8df9-436d-9ab0-98db450df10b"
+      "id": "a8e003a3-2ac1-41fc-b5c4-46d4329d0ecf"
     },
     {
       "cell_type": "code",
